fixed marker cluster bug-mcgs now display

--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- Initialize Leaflet map -->
-    <link
+    <!-- Initialize Leaflet map ************* -->
+    <!-- <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
       integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
       crossorigin=""
-    />
-    <!-- End of map intialization -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    /> -->
+    <!-- End of map intialization ***************** -->
+
+    <!-- CSS imports -->
+    <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 
     <link
       rel="stylesheet"
       href="https://unpkg.com/react-leaflet-markercluster/dist/styles.min.css"
-    />
+    /> -->
+
+    <!-- CSS imports -->
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -41,6 +45,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/react-leaflet-markercluster/dist/styles.min.css"
+    />
+
     <title>Providers</title>
   </head>
 
@@ -59,10 +69,10 @@
     -->
   </body>
   <!-- Leaflet map JS -->
-  <script
+  <!-- <script
     src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""
-  ></script>
+  ></script> -->
   <!-- End of Leaflet map JS -->
 </html>
